possible fix for gallery height on iOS

--- a/public/static/components/gallery/stylesheets/gallery.css
+++ b/public/static/components/gallery/stylesheets/gallery.css
@@ -120,3 +120,6 @@ CUSTOM STYLES
   width: 13px;
   height: 13px;
 }
+.flex-control-nav {
+  text-align: center;
+}
